feat: finish presentation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -35,7 +35,7 @@
 
 class: center, middle
 
-# React Native: what, how and why?
+# React Native: What, How and Why?
 
 Peter Carpenter
 
@@ -55,10 +55,18 @@ Peter Carpenter
 # Contents
 
 1. Introduction to React & React Native
-2. Taking a look at a basic React Native application
+2. A practical example
 3. React Native at scale
 4. Other advantages & disadvantages
 5. Q&A
+
+---
+
+### Viewer participation (optional)
+
+Download the "Expo" app on any iOS or Android on-device
+
+![Expo ios App](images/expo-client-ios.png) ![Expo android App](images/expo-client-android.png)
 
 ---
 
@@ -220,7 +228,11 @@ We have two main choices:
 
 #### Native platform tools
 
-Use the React Native CLI, along with Xcode and Android Studio to build and run your app
+Use the React Native CLI, along with Xcode and Android Studio to build and run your app.
+
+- Requires some knowledge of the native iOS/Android development tools
+- Allows you to add your own native code to the application
+- Full flexibility
 
 ---
 
@@ -228,15 +240,136 @@ Use the React Native CLI, along with Xcode and Android Studio to build and run y
 
 We have two main choices:
 
-#### Native platform tools
-
-Use the React Native CLI, along with Xcode and Android Studio to build and run your app.
-
 #### Expo
 
-A set of tools and services that simplify the process, with some additional features.
+A set of tools and services that simplify the build and development processes, with some additional features.
 
+- Provides a free cloud build service
+- OTA updates
+- Additional platform APIs
+- Simplified on-device testing
+- Unable to add or modify native code
 
+---
+
+class: center, middle
+
+# A Practical Example
+
+To do list app
+
+---
+
+class: center, middle
+
+# React Native at scale
+
+---
+
+### How can we use React Native effectively in a large company like Santander?
+
+---
+
+### How can we use React Native effectively in a large company like Santander?
+
+- Component libraries with platform specific variations
+
+---
+
+### How can we use React Native effectively in a large company like Santander?
+
+- Component libraries with platform specific variations
+- Share business logic between applications
+
+--- 
+
+### How can we use React Native effectively in a large company like Santander?
+
+- Component libraries with platform specific variations
+- Share business logic between applications
+
+Lets take a look at an example of sharing code between web and mobile.
+
+---
+
+class: center, middle
+
+# Other Advantages and Disadvantages
+
+---
+
+### Advantages
+
+---
+
+### Advantages
+
+- Only need one development team for iOS and Android (and even potentially web)
+
+---
+
+### Advantages
+
+- Only need one development team for iOS and Android (and even potentially web)
+- React enables fast development speeds
+
+---
+
+### Advantages
+
+- Only need one development team for iOS and Android (and even potentially web)
+- React enables fast development speeds
+- Existing javascript developers can be up-skilled to React Native developers
+
+---
+
+### Advantages
+
+- Only need one development team for iOS and Android (and even potentially web)
+- React enables fast development speeds
+- Existing javascript developers can be up-skilled to React Native developers
+- Huge javascript ecosystem - many functionalities have already been built
+
+---
+
+### Advantages
+
+- Only need one development team for iOS and Android (and even potentially web)
+- React enables fast development speeds
+- Existing javascript developers can be up-skilled to React Native developers
+- Huge javascript ecosystem - many functionalities have already been built
+- Performance benefits from real native UI elements (as opposed to webview based solutions)
+
+---
+
+### Disadvantages
+
+---
+
+### Disadvantages
+
+- Experienced React Native engineers can be hard to find
+
+---
+
+### Disadvantages
+
+- Experienced React Native engineers can be hard to find
+- The learning curve can be high, a wide knowledge base is required to achieve quality
+
+---
+
+### Disadvantages
+
+- Experienced React Native engineers can be hard to find
+- The learning curve can be high, a wide knowledge base is required to achieve quality
+- In some cases can be less performant than full native apps
+
+---
+
+class: center, middle
+
+# Q&A
 
 
 </textarea>
