--- a/presentation/index.html
+++ b/presentation/index.html
@@ -64,7 +64,7 @@ Peter Carpenter
 
 ### Viewer participation (optional)
 
-Download the "Expo" app on any iOS or Android on-device
+Download the "Expo" app on any iOS or Android device
 
 ![Expo ios App](images/expo-client-ios.png) ![Expo android App](images/expo-client-android.png)
 
